# pocketlang

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cli/: CliParser.cpp  CliParser.h  PocketApp.cpp  PocketApp.h  PocketVm.cpp  argparse.h  cli_options.h  cli_parser.cpp  cli_parser.h  main.cpp  pocket_app.cpp  pocket_app.h  pocket_vm.cpp  pocket_vm.h
docs/GettingStarted/: NativeAPI.md
scripts/: README.md  amalgamate.py  build.bat  run_benchmarks.py  run_tests.py  static_check.py
src/core/: buffers.h  common.h  compiler.c  compiler.cpp  compiler.h  core.c  core.cpp  core.h  debug.cpp  debug.h  internal.h  public.cpp  utils.cpp  utils.h  value.cpp  value.h  vm.cpp  vm.h
src/include/: pocketlang.h
src/libs/: libs.h  std_dummy.cpp  std_io.cpp  std_json.cpp  std_os.cpp  std_path.cpp  std_term.cpp  std_types.cpp
tests/lang/: basics.pk
tests/native/dl/: pknative.cpp
